--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 
 /* NEW FONTS*/
-
+a:hover{
+  text-decoration: none;
+}
 @font-face {
     font-family: 'andreanormal';
     src: url('../fonts/andrea-normal-webfont.eot');
@@ -54,10 +56,6 @@ h2 a:hover {
   border-bottom: 5px solid #808080;
 }
 
-h4{
-  margin-bottom: -5px;
-}
-
 .text {
   position: relative;
   top: 50%;
@@ -109,6 +107,7 @@ h4{
 .left-bars{
   background-color: lightgray;
   padding-bottom: 100px;
+  background-image: url('/left.svg');
 }
 
 .neuroscience{
@@ -157,12 +156,31 @@ h4{
   padding-right: 20px;
   width: 100%;
   max-width: 203px;
-  color: white;
+  color: gray;
   float: right;
   margin-right: 10px;
   margin-top: 10px;
   padding-top: 5px;
   padding-bottom: 1px;
+  background-color: white;
+  letter-spacing: 2px;
+  transition: 5s;
+}
+
+.left-brain-btn:hover , .right-brain-btn :hover{
+  opacity : .6;
+}
+
+.left-brain-btn p {
+  position: relative;
+  top: -4px;
+}
+
+.left-brain-btn .fa {
+  float: left;
+  padding: 20px;
+  margin-top: -73px;
+  font-size: 31px;
 }
 
 /* RIGHT BRAIN AREA */
@@ -173,6 +191,8 @@ h4{
   font-family: 'andreanormal';
   font-size: 15px;
   letter-spacing: 3px;
+  background-image: url('/right.svg');
+  background-position-y: 395px;
 }
 
 .music{
@@ -226,11 +246,25 @@ h4{
   padding-left: 20px;
   width: 100%;
   max-width: 203px;
-  color: white;
+  color: #df3f3f;
   float: left;
   margin-left: 10px;
   margin-top: 10px;
   padding-top: 5px;
+  background-color: white;
+  transition: 5s;
+}
+
+.right-brain-btn .fa{
+  float: right;
+  padding: 20px;
+  margin-top: -71px;
+  font-size: 31px;
+}
+
+.right-brain-btn p {
+  font-size: 20px;
+  margin-top: -6px;
 }
 
 @media screen and (max-width: 768px) {
@@ -239,6 +273,10 @@ h4{
     position: relative;
     z-index: 9999999;
     top: 33px;
+  }
+
+  .right-bars, .left-bars {
+    margin-bottom: 100px;
   }
 
   .neuroscience, .music{
