--- a/css/style.css
+++ b/css/style.css
@@ -106,8 +106,14 @@ h2 a:hover {
 /* LEFT BRAIN AREA */
 .left-bars{
   background-color: lightgray;
-  padding-bottom: 100px;
+  padding-bottom: 101px;
   background-image: url('/left.svg');
+}
+
+@-moz-document url-prefix() {
+  .left-bars{
+    padding-bottom: 103px;
+  }
 }
 
 .neuroscience{
