--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@ h2 a:hover {
 .left-bars{
   background-color: lightgray;
   padding-bottom: 101px;
-  background-image: url('/images/left.svg');
+  background-image: url('../images/left.svg');
 }
 
 @-moz-document url-prefix() {
@@ -197,7 +197,7 @@ h2 a:hover {
   font-family: 'andreanormal';
   font-size: 15px;
   letter-spacing: 3px;
-  background-image: url('/images/right.svg');
+  background-image: url('../images/right.svg');
 }
 
 .music{
@@ -303,4 +303,18 @@ h2 a:hover {
     z-index: 9999999;
     top: 133px;
   }
+}
+
+/* iPAD SPECIFIC CSS*/
+
+@media only screen and (device-width: 768px){
+  h1 {
+    top: 275px;
+  }
+  .kaitlyn-hova-face{
+    top: 300px;
+    max-width: 500px;
+    margin-bottom: -450px;
+  }
+
 }
