no more list style

--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,10 @@ h2 a:hover {
   border-bottom: 5px solid #808080;
 }
 
+ul{
+  list-style: none;
+}
+
 .text {
   position: relative;
   top: 50%;
