new home layout
*everything is above the fold on 15 inch macbook pro

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ h1 {
   margin: 0px;
   padding: 0px;
   position: relative;
-  top: 400px;
+  top: 300px;
 }
 
 h2 {
@@ -82,12 +82,13 @@ ul{
 
 .kaitlyn-hova-face{
   width: 100%;
-  max-width: 800px;
+  max-width: 600px;
   display: block;
   margin: 0 auto;
   position: relative;
-  top: 400px;
-  margin-bottom: -400px;
+  top: 200px;
+  margin-bottom: -500px;
+  z-index: -1;
 }
 
 /* SYNESTHESIA EFFECT */
@@ -288,10 +289,6 @@ ul{
     top: 33px;
   }
 
-  .right-bars, .left-bars {
-    margin-bottom: 100px;
-  }
-
   .neuroscience, .music{
     width: 100%;
   }
@@ -313,6 +310,9 @@ ul{
   }
   .kaitlyn-hova-face {
     margin-bottom: -415px;
+  }
+  .right-bars {
+    padding-bottom: 200px;
   }
 }
 
